default/objects/PD_Cache__c/PD_Cache__c.object-meta.xml
<CustomObject>
    <label>PD_Cache</label>
    <nameField>
        <displayFormat>PD_Cache-{000}</displayFormat>
        <label>PD_Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PD_Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>