default/objects/PD_Cache__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <externalId>true</externalId>
    <label>key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>