default/objects/PD_Cache__c/fields/value2__c.field-meta.xml
<CustomField>
    <fullName>value2__c</fullName>
    <label>value2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>