default/objects/PD_Cache__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>